--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
+    "nanoid": "^4.0.2",
     "nodemon": "^2.0.21",
     "redux": "^4.2.1",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "type": "module"
 }
